--- a/preprocess_test_mult.ipynb
+++ b/preprocess_test_mult.ipynb
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +597,7 @@
     "from gym import spaces\n",
     "\n",
     "class EEGFeatureEnv(gym.Env):\n",
-    "    def __init__(self, X_train, y_train, classifier):\n",
+    "    def __init__(self, X_train, y_train, other_subjects_X, other_subjects_y, classifier):\n",
     "\n",
     "        super(EEGFeatureEnv, self).__init__()\n",
     "\n",
@@ -605,11 +605,14 @@
     "        self.y_train = y_train\n",
     "        self.classifier = classifier\n",
     "\n",
+    "        self.tot_X = other_subjects_X\n",
+    "        self.tot_y = other_subjects_y\n",
+    "\n",
     "        self.curr_ind = 0\n",
     "\n",
     "        self.observation_space = gym.spaces.Box(low=-100000, high=100000, shape=(X_train.shape[1],), dtype=np.float32)\n",
     "\n",
-    "        self.action_space = gym.spaces.Discrete(4)\n",
+    "        self.action_space = gym.spaces.Discrete(2)\n",
     "\n",
     "        #print('init')\n",
     "\n",
@@ -623,9 +626,7 @@
     "            feature_vector = np.dot(feature_vector, np.random.randn(*feature_vector.shape) * 0.1)\n",
     "        elif action == 2:  # Jitter\n",
     "            feature_vector += np.random.normal(0, 0.05, feature_vector.shape)\n",
-    "        elif action == 3:  # Scale\n",
-    "            feature_vector *= (1 + np.random.uniform(-0.1, 0.1))\n",
-    "\n",
+    "        \n",
     "        transformed_X = self.X_train.copy()\n",
     "\n",
     "        transformed_X[self.curr_ind] = feature_vector\n",
@@ -641,6 +642,30 @@
     "\n",
     "        return feature_vector, reward, done, {}\n",
     "    \n",
+    "    def apply_rotation(self, feature_vector, rotation):\n",
+    "        pass\n",
+    "\n",
+    "    def apply_jitter(self, feature_vector, noise_level):\n",
+    "        pass\n",
+    "\n",
+    "    def compute_tot_accuracy(self, transformed_X, y_train):\n",
+    "\n",
+    "        self.classifier.fit(transformed_X, y_train)\n",
+    "\n",
+    "        tot_acc = []\n",
+    "\n",
+    "        for x, label in self.tot_X, self.tot_y:\n",
+    "\n",
+    "\n",
+    "            y_pred = self.classifier.predict(x)\n",
+    "\n",
+    "            accuracy = accuracy_score(y_pred, label)\n",
+    "\n",
+    "            tot_acc.append(accuracy)\n",
+    "\n",
+    "        return tot_acc\n",
+    "\n",
+    "    \n",
     "    def reset(self):\n",
     "\n",
     "        self.curr_ind = 0\n",
@@ -648,14 +673,7 @@
     "        #print(self.initial_acc)\n",
     "\n",
     "        return self.X_train[self.curr_ind]\n",
-    "\n",
-    "    def _get_obs(self):\n",
-    "        obs = self.observation_space  # Whatever you use as an observation\n",
-    "        if np.isnan(obs).any() or np.isinf(obs).any():\n",
-    "            print(\"⚠️ WARNING: NaN or Inf detected in observation!\")\n",
-    "            obs = np.nan_to_num(obs)  # Replace NaNs with 0\n",
-    "        return obs\n",
-    "\n",
+    "    \n",
     "    def render(self, mode='human'):\n",
     "        pass\n"
    ]
